--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = teensy
 board = teensy36
 framework = arduino
 ; lib_ldf_mode = deep+
+
+monitor_port = /dev/cu.usbmodem22394101
+monitor_speed = 115200 ; ,8,N,1
